# mocarabe

./: .gitignore  LICENSE  README.md  constraints_for_ii.py  gcc-with-python.sh  hls.py  llvm-with-clang.sh  mocarabe.py  op_layout_for_higher_ii.py  pyproject.toml  regen_rtl.py  requirements.txt  run_mocarabe.py  torusGUI2.py  venv_instructions.md
.github/workflows/: ci.yml
bench/bitgpu/: int_adder_chain.c  int_approx1.c  int_bellido.c  int_caprasse.c  int_dct.c  int_deriche.c  int_ex2.c  int_fig3.c  int_fir32.c  int_gaussian.c  int_iir8.c  int_level1_linear.c  int_level1_saturation.c  int_poly.c  int_poly10.c  int_poly20.c  int_poly3.c  int_poly4.c  int_poly6.c  int_poly8.c  int_poly_quadratic.c  int_rgb.c  int_sobel.c
export/: vivado.md
hgr/adder_chain/: adder_chain.hgr
hgr/approx1/: approx1.hgr
hgr/bellido/: bellido.hgr
hgr/bspline/: bspline.hgr
hls/: benchmarks.csv  gather_results.py  generate_scripts.py  iiunrolls.csv  sweep.sh  sweep_unconstrained.sh
llvm_pass/: Makefile  dfg_to_hgr.cpp
mocarabe/: README.md  SRC_README.md  box.py  file_util.py  placement_visualizer.py  resource_graph.py  to_dot.py  torusGUI2.py  torusGUI3.py  torus_gui_freeze.py
paper/: Legacy-README.md
rtl/: .gitignore  README.MD  cgra.tcl  mapping.xdc  placement.py  run_mocarabe.py
src/: README.md  SRC_README.md  box.py  file_util.py  hwgen_develop.py  placement_visualizer.py  resource_graph.py  resource_type.py  to_dot.py  torusGUI2.py  torusGUI3.py  torus_gui_freeze.py
test/: test_correctness.py  test_lint.py  test_llvm_hls.py  test_netlist.py  test_regression.py
(+563 files in other folders)
