[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mocarabe"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "func-timeout==4.3.5",
    "halp>=1.0",
    "numpy>=1.19.0",
    "palettable>=3.3.0",
    "pyscreenshot>=2.2",
    "canvasvg>=1.0",
    "networkx>=2.4",
    "simanneal>=0.5",
    "matplotlib>=3.3.0",
    "tk>=0.1.0",
    "lxml>=4.6",
    "beautifulsoup4>=4.9",
    "pydot>=1.4.1",
    "PySCIPOpt>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
mocarabe = "mocarabe.cli:main"
mocarabe-viz = "mocarabe.torus_gui_freeze:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "eda: marks tests that require EDA tool.",
]
